--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -1454,61 +1454,7 @@
                         </div>
                     </div>
 
-                    <!-- 統計摘要卡片 -->
-                    <div class="row mb-4">
-                        <div class="col-md-3 mb-3">
-                            <div class="card text-white bg-primary">
-                                <div class="card-body">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div>
-                                            <h6 class="card-title mb-1">總投注筆數</h6>
-                                            <h4 class="mb-0">{{ reportData.totalSummary ? reportData.totalSummary.betCount : 0 }}</h4>
-                                        </div>
-                                        <i class="fas fa-ticket-alt fa-2x opacity-75"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-3">
-                            <div class="card text-white bg-info">
-                                <div class="card-body">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div>
-                                            <h6 class="card-title mb-1">總投注金額</h6>
-                                            <h4 class="mb-0">{{ formatMoney(reportData.totalSummary ? reportData.totalSummary.betAmount : 0) }}</h4>
-                                        </div>
-                                        <i class="fas fa-coins fa-2x opacity-75"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-3">
-                            <div class="card text-white bg-success">
-                                <div class="card-body">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div>
-                                            <h6 class="card-title mb-1">有效投注</h6>
-                                            <h4 class="mb-0">{{ formatMoney(reportData.totalSummary ? reportData.totalSummary.validAmount : 0) }}</h4>
-                                        </div>
-                                        <i class="fas fa-check-circle fa-2x opacity-75"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-3 mb-3">
-                            <div class="card text-white" :class="(reportData.totalSummary ? reportData.totalSummary.finalProfitLoss : 0) >= 0 ? 'bg-success' : 'bg-danger'">
-                                <div class="card-body">
-                                    <div class="d-flex justify-content-between align-items-center">
-                                        <div>
-                                            <h6 class="card-title mb-1">盈虧結果</h6>
-                                            <h4 class="mb-0">{{ formatProfit(reportData.totalSummary ? reportData.totalSummary.finalProfitLoss : 0) }}</h4>
-                                        </div>
-                                        <i class="fas" :class="(reportData.totalSummary ? reportData.totalSummary.finalProfitLoss : 0) >= 0 ? 'fa-arrow-up' : 'fa-arrow-down'" class="fa-2x opacity-75"></i>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+
 
                     <!-- 代理層級分析報表 -->
                     <div class="card">
@@ -1605,13 +1551,13 @@
                                                         <i class="fas fa-chevron-right ms-1 small"></i>
                                                     </button>
                                                 </div>
-                                                <!-- 如果是會員且有下注記錄，顯示為可點擊查看下注記錄 -->
+                                                <!-- 如果是會員且有下注記錄，顯示為可點擊查看注單詳情 -->
                                                 <div v-else-if="item.userType === 'member' && item.betCount > 0" class="d-flex align-items-center justify-content-center">
                                                     <button class="btn btn-link p-0 text-decoration-none fw-bold text-success" 
-                                                            @click="viewMemberBets(item.username, {startDate: reportFilters.startDate, endDate: reportFilters.endDate})" 
-                                                            title="點擊查看下注記錄">
+                                                            @click="showMemberBetDetails(item)" 
+                                                            title="點擊查看注單詳情">
                                                         {{ item.username }}
-                                                        <i class="fas fa-list ms-1 small"></i>
+                                                        <i class="fas fa-list-alt ms-1 small"></i>
                                                     </button>
                                                 </div>
                                                 <!-- 其他情況顯示為普通文字 -->
@@ -3557,6 +3503,171 @@
                             <span v-if="bettingLimitData.submitting" class="spinner-border spinner-border-sm me-2"></span>
                             確認調整
                         </button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 會員注單詳情Modal -->
+    <div class="modal fade" id="memberBetDetailsModal" tabindex="-1">
+        <div class="modal-dialog modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">
+                        <i class="fas fa-list-alt me-2"></i>{{ memberBetDetails.memberUsername }} - 注單詳情
+                    </h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <!-- 篩選條件 -->
+                    <div class="row mb-3">
+                        <div class="col-md-4">
+                            <label class="form-label">開始日期</label>
+                            <input type="date" class="form-control" v-model="memberBetDetails.startDate">
+                        </div>
+                        <div class="col-md-4">
+                            <label class="form-label">結束日期</label>
+                            <input type="date" class="form-control" v-model="memberBetDetails.endDate">
+                        </div>
+                        <div class="col-md-4 d-flex align-items-end">
+                            <button class="btn btn-primary me-2" @click="loadMemberBetDetails">
+                                <i class="fas fa-search me-1"></i>查詢
+                            </button>
+                            <button class="btn btn-outline-secondary" @click="refreshMemberBetDetails">
+                                <i class="fas fa-sync me-1"></i>刷新
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- 注單列表 -->
+                    <div class="table-responsive">
+                        <table class="table table-striped table-sm">
+                            <thead>
+                                <tr>
+                                    <th style="width: 120px;">單號</th>
+                                    <th style="width: 130px;">投注時間</th>
+                                    <th>遊戲</th>
+                                    <th>用戶名</th>
+                                    <th>投注內容</th>
+                                    <th style="width: 80px;">下注金額</th>
+                                    <th style="width: 60px;">退水</th>
+                                    <th style="width: 80px;">下注結果</th>
+                                    <th style="width: 80px;">本級佔成</th>
+                                    <th style="width: 80px;">本級結果</th>
+                                    <th style="width: 100px;">佔成明細</th>
+                                    <th style="width: 100px;">操作</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr v-for="bet in memberBetDetails.bets" :key="bet.id">
+                                    <td class="text-monospace small">{{ bet.period }}{{ String(bet.id).padStart(3, '0') }}</td>
+                                    <td class="small">{{ formatBetTime(bet.created_at) }}</td>
+                                    <td class="small">波場賽車(1分)<br>{{ bet.period }}期</td>
+                                    <td class="fw-bold">{{ bet.username }}</td>
+                                    <td>
+                                        <div class="small">
+                                            {{ bet.market_type }}盤<br>
+                                            {{ formatBetContent(bet) }}<br>
+                                            <span class="text-muted">@ {{ bet.odds }}</span>
+                                        </div>
+                                    </td>
+                                    <td class="text-end">{{ formatMoney(bet.amount) }}</td>
+                                    <td class="text-center">{{ (bet.rebate_percentage * 100).toFixed(1) }}%</td>
+                                    <td class="text-end" :class="bet.win ? 'text-success' : 'text-danger'">
+                                        {{ bet.win ? '+' + formatMoney(bet.win_amount - bet.amount) : '-' + formatMoney(bet.amount) }}
+                                    </td>
+                                    <td class="text-center">{{ bet.commission_percentage || '0' }}%</td>
+                                    <td class="text-end">{{ formatMoney(bet.commission_amount || 0) }}</td>
+                                    <td class="text-center">
+                                        <button class="btn btn-sm btn-outline-info" @click="showCommissionDetails(bet)">
+                                            明細
+                                        </button>
+                                    </td>
+                                    <td class="text-center">
+                                        <button class="btn btn-sm btn-outline-success" @click="showDrawResult(bet.period)">
+                                            開獎結果
+                                        </button>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+
+                    <!-- 空狀態 -->
+                    <div v-if="memberBetDetails.bets.length === 0" class="text-center py-5">
+                        <i class="fas fa-inbox fa-3x text-muted mb-3"></i>
+                        <p class="text-muted">暫無注單記錄</p>
+                    </div>
+
+                    <!-- 分頁 -->
+                    <nav v-if="memberBetDetails.totalPages > 1">
+                        <ul class="pagination justify-content-center">
+                            <li class="page-item" :class="{disabled: memberBetDetails.currentPage === 1}">
+                                <a class="page-link" href="#" @click.prevent="changeMemberBetPage(memberBetDetails.currentPage - 1)">上一頁</a>
+                            </li>
+                            <li class="page-item" v-for="page in getMemberBetPageRange()" :key="page" :class="{active: page === memberBetDetails.currentPage}">
+                                <a class="page-link" href="#" @click.prevent="changeMemberBetPage(page)">{{ page }}</a>
+                            </li>
+                            <li class="page-item" :class="{disabled: memberBetDetails.currentPage === memberBetDetails.totalPages}">
+                                <a class="page-link" href="#" @click.prevent="changeMemberBetPage(memberBetDetails.currentPage + 1)">下一頁</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 佔成明細Modal -->
+    <div class="modal fade" id="commissionDetailsModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">佔成明細</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="table-responsive">
+                        <table class="table table-sm">
+                            <thead>
+                                <tr>
+                                    <th>類型</th>
+                                    <th>用戶名</th>
+                                    <th>佔成</th>
+                                    <th>退水</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr v-for="detail in commissionDetails" :key="detail.id">
+                                    <td>{{ detail.level_name }}</td>
+                                    <td>{{ detail.username }}</td>
+                                    <td class="text-end">{{ detail.commission_percentage }}%</td>
+                                    <td class="text-end">{{ detail.rebate_percentage }}%</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- 開獎結果Modal -->
+    <div class="modal fade" id="drawResultModal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">開獎結果</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body text-center">
+                    <h6 class="mb-3">期號：{{ drawResult.period }}</h6>
+                    <div class="draw-balls-container d-flex justify-content-center flex-wrap gap-2">
+                        <div v-for="(number, index) in drawResult.numbers" :key="index" class="text-center">
+                            <div class="small text-muted mb-1">第{{ getPositionName(index + 1) }}名</div>
+                            <div class="number-ball mx-auto" :class="'color-' + number" style="width: 50px; height: 50px; line-height: 50px; border-radius: 50%; color: white; font-weight: bold;">{{ number }}</div>
+                        </div>
                     </div>
                 </div>
             </div>
