修復代理管理平台5個重要問題
1. 級別顯示重複問題：移除帳號管理表格操作欄中重複的狀態按鈕，簡化為狀態下拉選單
2. 盤口類型顯示錯誤：修復新增代理模態框中盤口類型邏輯，正確取得user.market_type確保A盤代理顯示A盤資訊
3. 退水比例範圍錯誤：修復A盤退水範圍顯示，從錯誤的4.1%改為正確的1.1%
4. 創建會員自動跳轉：移除創建會員後的自動跳轉邏輯，保留在原地顯示成功訊息並智能刷新
5. 退水設定顯示錯誤：修復退水設定模態框中'目前設定'總是顯示1.1%的問題，改為顯示真實的當前設定

技術修復：
- 更新showRebateSettingsModal函數正確取得代理本身的退水比例
- 修復HTML模板中盤口類型檢測邏輯，支援currentManagingAgent.market_type || user.market_type回退
- 統一createMember成功後的處理邏輯，根據activeTab智能決定刷新方式
- 同步agent和deploy版本確保一致性

現在ti2025A帳號在根層級新增代理將正確顯示A盤(高賠率盤口)和0%-1.1%退水範圍，退水設定將顯示真實的當前設定而非固定1.1%。

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -832,11 +832,6 @@
                                                     </span>
                                                 </div>
                                             </td>
-                                            <td>
-                                                <span class="badge" :class="item.userType === 'agent' ? 'bg-primary' : 'bg-success'">
-                                                    {{ item.userType === 'agent' ? getLevelName(item.level) : '會員' }}
-                                                </span>
-                                            </td>
                                             <td>{{ formatMoney(item.balance) }}</td>
                                             <td>
                                                 <div class="d-flex align-items-center">
@@ -876,13 +871,9 @@
                                                         <i class="fas fa-key me-1"></i>重設密碼
                                                     </button>
                                                     <div class="btn-group">
-                                                        <button type="button" class="btn btn-sm" :class="getStatusBadgeClass(item.status)" disabled>
-                                                            <i class="fas" :class="getStatusIconClass(item.status)"></i>
-                                                            {{ getStatusText(item.status) }}
-                                                        </button>
-                                                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle dropdown-toggle-split" 
+                                                        <button type="button" class="btn btn-sm btn-outline-secondary dropdown-toggle" 
                                                                 data-bs-toggle="dropdown" aria-expanded="false">
-                                                            <span class="visually-hidden">切換狀態</span>
+                                                            <i class="fas fa-cog me-1"></i>狀態
                                                         </button>
                                                         <ul class="dropdown-menu">
                                                             <li v-if="item.status !== 1">
@@ -965,12 +956,12 @@
                                                     <label class="form-label">盤口類型</label>
                                                     <div class="form-control-plaintext bg-light border rounded p-2">
                                                         <i class="fas fa-info-circle text-info me-2"></i>
-                                                        <strong>{{ getMarketInfo(currentManagingAgent.market_type || 'D').name }}</strong>
-                                                        <small class="text-muted ms-2">({{ getMarketInfo(currentManagingAgent.market_type || 'D').description }})</small>
+                                                        <strong>{{ getMarketInfo((currentMemberManagingAgent && currentMemberManagingAgent.market_type ? currentMemberManagingAgent.market_type : (currentManagingAgent.market_type || user.market_type)) || 'D').name }}</strong>
+                                                        <small class="text-muted ms-2">({{ getMarketInfo((currentMemberManagingAgent && currentMemberManagingAgent.market_type ? currentMemberManagingAgent.market_type : (currentManagingAgent.market_type || user.market_type)) || 'D').description }})</small>
                                                     </div>
                                                     <small class="form-text text-muted">
                                                         <i class="fas fa-arrow-down me-1"></i>
-                                                        盤口類型自動繼承自 {{ currentManagingAgent.username }}，無需選擇
+                                                        盤口類型自動繼承自 {{ (currentMemberManagingAgent && currentMemberManagingAgent.username ? currentMemberManagingAgent.username : currentManagingAgent.username) }}，無需選擇
                                                     </small>
                                                 </div>
                                                 <div class="mb-3">
@@ -985,9 +976,9 @@
                                                 <div class="mb-3" v-if="newAgent.rebate_mode === 'percentage'">
                                                     <label class="form-label">退水比例 (%)</label>
                                                     <input type="number" class="form-control" v-model="newAgent.rebate_percentage" 
-                                                           step="0.01" min="0" :max="((currentMemberManagingAgent && currentMemberManagingAgent.rebate_percentage !== undefined ? currentMemberManagingAgent.rebate_percentage : currentManagingAgent.rebate_percentage) || (currentManagingAgent.market_type === 'A' ? 0.011 : 0.041)) * 100" required>
+                                                           step="0.01" min="0" :max="((currentMemberManagingAgent && currentMemberManagingAgent.rebate_percentage !== undefined ? currentMemberManagingAgent.rebate_percentage : currentManagingAgent.rebate_percentage) || ((currentManagingAgent.market_type || user.market_type) === 'A' ? 0.011 : 0.041)) * 100" required>
                                                     <small class="form-text text-muted">
-                                                        可设定范围：0% - {{ (((currentMemberManagingAgent && currentMemberManagingAgent.rebate_percentage !== undefined ? currentMemberManagingAgent.rebate_percentage : currentManagingAgent.rebate_percentage) || (currentManagingAgent.market_type === 'A' ? 0.011 : 0.041)) * 100).toFixed(1) }}% (當前代理限制)
+                                                        可设定范围：0% - {{ (((currentMemberManagingAgent && currentMemberManagingAgent.rebate_percentage !== undefined ? currentMemberManagingAgent.rebate_percentage : currentManagingAgent.rebate_percentage) || ((currentManagingAgent.market_type || user.market_type) === 'A' ? 0.011 : 0.041)) * 100).toFixed(1) }}% (當前代理限制)
                                                     </small>
                                                 </div>
                                                 <div class="mb-3">
@@ -1002,7 +993,7 @@
                                                     </div>
                                                     <div class="card-body">
                                                         <ul class="mb-0 small">
-                                                            <li><strong>全拿所有退水：</strong>該代理获得所有可得退水 ({{ (((currentMemberManagingAgent && currentMemberManagingAgent.rebate_percentage !== undefined ? currentMemberManagingAgent.rebate_percentage : currentManagingAgent.rebate_percentage) || (currentManagingAgent.market_type === 'A' ? 0.011 : 0.041)) * 100).toFixed(1) }}%)</li>
+                                                            <li><strong>全拿所有退水：</strong>該代理获得所有可得退水 ({{ (((currentMemberManagingAgent && currentMemberManagingAgent.rebate_percentage !== undefined ? currentMemberManagingAgent.rebate_percentage : currentManagingAgent.rebate_percentage) || ((currentManagingAgent.market_type || user.market_type) === 'A' ? 0.011 : 0.041)) * 100).toFixed(1) }}%)</li>
                                                             <li><strong>设定具體比例：</strong>該代理获得指定比例的退水</li>
                                                             <li><strong>全退給下級：</strong>該代理不获得退水，全部給下級代理</li>
                                                         </ul>
@@ -1046,16 +1037,16 @@
                                         <div class="mb-3" v-if="rebateSettings.rebate_mode === 'percentage'">
                                             <label class="form-label">退水比例 (%)</label>
                                             <input type="number" class="form-control" v-model="rebateSettings.rebate_percentage" 
-                                                   step="0.01" min="0" :max="(rebateAgent.rebate_percentage || rebateAgent.max_rebate_percentage || 0.041) * 100" required>
+                                                   step="0.01" min="0" :max="(rebateAgent.max_rebate_percentage || ((currentManagingAgent.market_type || user.market_type) === 'A' ? 0.011 : 0.041)) * 100" required>
                                             <small class="form-text text-muted">
-                                                可设定范围：0% - {{ ((rebateAgent.rebate_percentage || rebateAgent.max_rebate_percentage || 0.041) * 100).toFixed(1) }}%
+                                                可设定范围：0% - {{ ((rebateAgent.max_rebate_percentage || ((currentManagingAgent.market_type || user.market_type) === 'A' ? 0.011 : 0.041)) * 100).toFixed(1) }}%
                                             </small>
                                         </div>
                                         <div class="alert alert-info">
                                             <h6>目前设定：</h6>
                                             <p class="mb-0">
-                                                {{ getRebateModeText(rebateAgent.rebate_mode) }}
-                                                {{ rebateAgent.rebate_mode === 'percentage' ? ` ${(rebateAgent.rebate_percentage * 100).toFixed(1)}%` : '' }}
+                                                {{ getRebateModeText(rebateSettings.rebate_mode) }}
+                                                {{ rebateSettings.rebate_mode === 'percentage' ? ` ${rebateSettings.rebate_percentage}%` : '' }}
                                             </p>
                                         </div>
                                         <div class="text-end">
