修復代理管理平台4個關鍵問題
1. 級別顯示重複修復：修改getLevelShortName函數從'1級代理'改為'1級'，在HTML中手動添加'代理'字，避免與表格中重複顯示

2. 狀態更改後自動刷新：所有狀態更改函數(toggleMemberStatus/toggleAgentStatus/changeAgentStatus/changeMemberStatus)已包含自動刷新邏輯，根據activeTab智能決定是否刷新hierarchicalMembers或普通列表

3. 退水模式說明修正：'按比例分配（本代理分得設定比例）'改為'按比例分配（分配給下級代理設定比例）'，澄清退水分配的真實含義是分配給下級而非本代理

4. 代理階層顯示正常：確保代理級別badge正確顯示為'1級代理'、'2級代理'等格式，不再出現重複的'級代理'字

技術修復：
- getLevelShortName返回簡潔的'1級'、'2級'格式
- HTML模板中統一添加'代理'後綴確保顯示一致性
- 退水說明文字澄清實際分配邏輯
- 同步修復agent和deploy版本保持一致性

現在ti2025A進入下級代理justin2025A後點擊新增代理將正確顯示'二級代理'，狀態更改後立即刷新，退水說明準確反映分配邏輯。

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -812,7 +812,7 @@
                                         <tr v-for="item in hierarchicalMembers" :key="item.id">
                                             <td>
                                                 <span class="badge" :class="item.userType === 'agent' ? 'bg-primary' : 'bg-success'">
-                                                    {{ item.userType === 'agent' ? getLevelShortName(item.level) : '會員' }}
+                                                    {{ item.userType === 'agent' ? getLevelShortName(item.level) + '代理' : '會員' }}
                                                 </span>
                                             </td>
                                             <td>{{ item.id }}</td>
@@ -968,7 +968,7 @@
                                                     <label class="form-label">退水模式</label>
                                                     <select class="form-select" v-model="newAgent.rebate_mode" required>
                                                         <option value="all">全拿退水（本代理拿走所有退水）</option>
-                                                        <option value="percentage">按比例分配（本代理分得設定比例）</option>
+                                                        <option value="percentage">按比例分配（分配給下級代理設定比例）</option>
                                                         <option value="none">全退下級（本代理不拿，全給下級代理）</option>
                                                     </select>
                                                     <small class="form-text text-muted">退水分配方式</small>
@@ -994,7 +994,7 @@
                                                     <div class="card-body">
                                                         <ul class="mb-0 small">
                                                             <li><strong>全拿所有退水：</strong>該代理获得所有可得退水 ({{ (((currentMemberManagingAgent && currentMemberManagingAgent.rebate_percentage !== undefined ? currentMemberManagingAgent.rebate_percentage : currentManagingAgent.rebate_percentage) || ((currentManagingAgent.market_type || user.market_type) === 'A' ? 0.011 : 0.041)) * 100).toFixed(1) }}%)</li>
-                                                            <li><strong>设定具體比例：</strong>該代理获得指定比例的退水</li>
+                                                            <li><strong>设定具體比例：</strong>分配給下級代理指定比例的退水</li>
                                                             <li><strong>全退給下級：</strong>該代理不获得退水，全部給下級代理</li>
                                                         </ul>
                                                     </div>
