--- a/deploy/agent/frontend/index.html
+++ b/deploy/agent/frontend/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>代理管理系统</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <title>代理管理系統</title>
+    
+    <!-- 添加緩存清除參數 -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <!-- 自定義樣式 - 添加版本號防止緩存 -->
+    <link rel="stylesheet" href="css/main.css?v=20250115001">
     <style>
         /* 防止Vue模板閃現 */
         [v-cloak] {
@@ -3329,11 +3337,12 @@
     </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
-    <script src="js/main.js"></script>
+    <!-- 主要JS文件 - 添加版本號防止緩存 -->
+    <script src="js/main.js?v=20250115001"></script>
     <script>
         async function updateProfile() {
             console.log('开始更新个人资料...');
