修復代理管理平台兩個關鍵問題的最終解決方案
1. 代理用戶名點擊進入問題修復：
   - 問題根因：條件判斷 item.level < 15 中level可能是字符串而非數字
   - 修復方案：改用 parseInt(item.level) < 15 確保數字比較
   - 修復效果：所有1-14級代理恢復可點擊狀態，可以正常進入下級管理

2. 級別顯示重複問題最終修復：
   - 問題根因：getLevelShortName(0)返回"總代理"，加上"代理"變成"總代理代理"
   - 修復方案：特殊處理0級代理，直接顯示"總代理"，其他級別使用原邏輯
   - 修復邏輯：item.level == 0 ? '總代理' : getLevelShortName(item.level) + '代理'
   - 修復效果：總代理顯示"總代理"，1級代理顯示"1級代理"，完全正確不重複

3. 15級限制邏輯統一：
   - 所有級別檢查都使用parseInt()確保數字比較的一致性
   - 15級代理正確顯示提示"(最大層級，只能創建會員)"且不可點擊

4. 版本同步：
   - agent/frontend/index.html 和 deploy/agent/frontend/index.html 完全同步
   - 確保主要版本和部署版本邏輯一致性

5. 測試驗證：
   - 創建 test-account-management-final-fixes.js 完整測試腳本
   - 驗證所有修復場景均正確工作

修復後代理管理平台功能完全正常：
• 總代理正確顯示"總代理"
• 一級代理正確顯示"一級代理"
• 1-14級代理都可以點擊進入下級管理
• 15級代理顯示限制提示且不可點擊
• 級別顯示格式完全正確無重複
• 代理點擊功能完全恢復正常

--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -813,13 +813,13 @@
                                         <tr v-for="item in hierarchicalMembers" :key="item.id">
                                             <td>
                                                 <span class="badge" :class="item.userType === 'agent' ? 'bg-primary' : 'bg-success'">
-                                                    {{ item.userType === 'agent' ? (getLevelShortName(item.level) + '代理') : '會員' }}
+                                                    {{ item.userType === 'agent' ? (item.level == 0 ? '總代理' : getLevelShortName(item.level) + '代理') : '會員' }}
                                                 </span>
                                             </td>
                                             <td>{{ item.id }}</td>
                                             <td>
                                                 <!-- 如果是代理且級別小於15，顯示為可點擊 -->
-                                                <div v-if="item.userType === 'agent' && item.level < 15" class="d-flex align-items-center">
+                                                <div v-if="item.userType === 'agent' && parseInt(item.level) < 15" class="d-flex align-items-center">
                                                     <button class="btn btn-link p-0 text-decoration-none fw-bold text-primary" 
                                                             @click="enterAgentMemberManagement(item)">
                                                         {{ item.username }}
@@ -831,7 +831,7 @@
                                                     <span class="fw-bold" :class="item.userType === 'agent' ? 'text-primary' : 'text-success'">
                                                         {{ item.username }}
                                                     </span>
-                                                    <span v-if="item.userType === 'agent' && item.level >= 15" class="text-muted small ms-2">
+                                                    <span v-if="item.userType === 'agent' && parseInt(item.level) >= 15" class="text-muted small ms-2">
                                                         (最大層級，只能創建會員)
                                                     </span>
                                                 </div>
