修復代理層級分析報表級別顯示問題：1)後端API返回代理數字級別而非字符串 2)前端使用getLevelShortName函數正確顯示代理級別 3)代理顯示為N級代理，會員顯示為會員 4)同步agent和deploy版本

--- a/deploy/agent/frontend/index.html
+++ b/deploy/agent/frontend/index.html
@@ -732,11 +732,11 @@
                                 class="breadcrumb-item"
                                 :class="{ 'active': index === memberBreadcrumb.length - 1 }">
                                 <span v-if="index === memberBreadcrumb.length - 1" class="fw-bold">
-                                    {{ item.username }} ({{ item.level }})
+                                    {{ item.username }} ({{ item.levelName || getLevelName(item.level) }})
                                 </span>
                                 <button v-else class="btn btn-link p-0 text-decoration-none" 
                                         @click="memberBreadcrumb.splice(index + 1); goBackToMemberLevel(item)">
-                                    {{ item.username }} ({{ item.level }})
+                                    {{ item.username }} ({{ item.levelName || getLevelName(item.level) }})
                                 </button>
                             </li>
                             <li v-if="memberBreadcrumb.length > 0" class="breadcrumb-item ms-auto">
@@ -1347,7 +1347,7 @@
                                             <!-- 級別 -->
                                             <td class="text-center">
                                                 <span class="badge" :class="item.userType === 'agent' ? 'bg-primary' : 'bg-success'">
-                                                    {{ item.level || '會員' }}
+                                                    {{ item.userType === 'agent' ? (item.level == 0 ? '總代理' : getLevelShortName(item.level) + '代理') : '會員' }}
                                                 </span>
                                             </td>
                                             <!-- 用戶名 -->
