--- a/agent/frontend/index.html
+++ b/agent/frontend/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
-<html lang="zh-cn">
+<html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>代理管理系统</title>
-    <link rel="icon" type="image/svg+xml" href="favicon.svg">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <title>代理管理系統</title>
+    
+    <!-- 添加緩存清除參數 -->
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
+    
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Font Awesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <!-- 自定義樣式 - 添加版本號防止緩存 -->
+    <link rel="stylesheet" href="css/main.css?v=20250115001">
     <style>
         /* 防止Vue模板閃現 */
         [v-cloak] {
@@ -724,11 +732,11 @@
                                 class="breadcrumb-item"
                                 :class="{ 'active': index === memberBreadcrumb.length - 1 }">
                                 <span v-if="index === memberBreadcrumb.length - 1" class="fw-bold">
-                                    {{ item.username }} ({{ item.level }})
+                                    {{ item.username }} ({{ item.levelName || getLevelName(item.level) }})
                                 </span>
                                 <button v-else class="btn btn-link p-0 text-decoration-none" 
                                         @click="memberBreadcrumb.splice(index + 1); goBackToMemberLevel(item)">
-                                    {{ item.username }} ({{ item.level }})
+                                    {{ item.username }} ({{ item.levelName || getLevelName(item.level) }})
                                 </button>
                             </li>
                             <li v-if="memberBreadcrumb.length > 0" class="breadcrumb-item ms-auto">
@@ -836,6 +844,7 @@
                                                     </span>
                                                 </div>
                                             </td>
+
                                             <td>{{ formatMoney(item.balance) }}</td>
                                             <td>
                                                 <div class="d-flex align-items-center">
@@ -946,8 +955,7 @@
                                                 <div class="mb-3">
                                                     <label class="form-label">密碼</label>
                                                     <input type="password" class="form-control" v-model="newAgent.password" required>
-                                                </div>
-                                <div class="mb-3">
+                                                </div>                                <div class="mb-3">
                                     <label class="form-label">代理级别</label>
                                     <input type="text" class="form-control" 
                                            :value="getNextLevelName()" 
@@ -1339,7 +1347,7 @@
                                             <!-- 級別 -->
                                             <td class="text-center">
                                                 <span class="badge" :class="item.userType === 'agent' ? 'bg-primary' : 'bg-success'">
-                                                    {{ item.level || '會員' }}
+                                                    {{ item.userType === 'agent' ? (item.level == 0 ? '總代理' : getLevelShortName(item.level) + '代理') : '會員' }}
                                                 </span>
                                             </td>
                                             <!-- 用戶名 -->
@@ -3333,11 +3341,12 @@
     </div>
 
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/3.9.1/chart.min.js"></script>
-    <script src="js/main.js"></script>
+    <!-- 主要JS文件 - 添加版本號防止緩存 -->
+    <script src="js/main.js?v=20250115001"></script>
     <script>
         async function updateProfile() {
             console.log('开始更新个人资料...');
