修正遊戲開獎中階段倒數顯示與邏輯，移除手動刷新限紅功能
- 修正 backend.js 與 deploy/backend.js：
  * betting 階段結束後正確切換到 drawing 狀態並設置 12 秒倒數
  * drawing 階段每秒倒數，結束後自動結算並切換新一期
  * 統一使用倒數管理機制，移除重複的 setTimeout 邏輯

- 修正 frontend/index.html 與 deploy/frontend/index.html：
  * 開獎中階段顯示倒數秒數（如「開獎中 00:12」）
  * 倒數結束前不提前顯示開獎結果，只顯示動畫與倒數
  * 移除所有手動刷新限紅的 UI 與方法
  * 確保限紅設定只能自動偵測更新

- 改善前後端狀態同步與自動刷新機制

--- a/deploy/frontend/index.html
+++ b/deploy/frontend/index.html
@@ -5655,8 +5655,8 @@
                             </button>
                             <div class="countdown-section" :class="gameStatus">
                                 <div class="countdown-inline">
-                                    <span class="countdown-label">{{ gameStatus === 'betting' ? '封盤倒计时' : '开奖中...' }}</span>
-                                    <span class="countdown-time" v-if="gameStatus === 'betting'">{{ formatTime(countdownSeconds) }}</span>
+                                    <span class="countdown-label">{{ gameStatus === 'betting' ? '封盤倒计时' : '开奖中' }}</span>
+                                    <span class="countdown-time">{{ formatTime(countdownSeconds) }}</span>
                                 </div>
                             </div>
                         </div>
