移除 logout 中對已刪除限紅監聽器的引用
- 移除 stopBettingLimitsMonitor 方法調用
- 完成限紅自動化功能的清理工作
- 確保前端不再有對已刪除方法的引用

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7446,8 +7446,7 @@
                     this.$forceUpdate();
                 },
                 logout() {
-                    // 停止限紅更新監聽器
-                    this.stopBettingLimitsMonitor();
+                    // 限紅監聽器已移除，無需手動停止
                     
                     // 清除所有登录资讯並跳轉到登录頁面
                     sessionStorage.clear();
